# This file is in /src/parser
FIND_PACKAGE(BISON)
FIND_PACKAGE(FLEX)
BISON_TARGET(PARSER parser.y ${CMAKE_CURRENT_SOURCE_DIR}/parser.cc)
FLEX_TARGET(LEXER lexer.l ${CMAKE_CURRENT_SOURCE_DIR}/lexer.cc)
ADD_FLEX_BISON_DEPENDENCY(LEXER PARSER)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} PARSER_SRC)
ADD_EXECUTABLE(iec_compiler ${PARSER_SRC} ${BISON_PARSER_OUTPUTS} ${FLEX_LEXER_OUTPUTS})
